--- a/src/cards.css
+++ b/src/cards.css
@@ -32,6 +32,12 @@
   vertical-align: top;
 }
 
+.playingCards .card.selected {
+  -moz-box-shadow: .2em .2em .3em #be0000;
+  -webkit-box-shadow: .2em .2em .3em #be0000;
+  box-shadow: .2em .2em .3em #be0000;
+}
+
 .playingCards a.card {
   text-decoration: none;
 }
